put command op gon class